ecmascript/parser/tests/typescript-errors/tsc/async/es2017/await_unaryExpression_es2017_3/input.ts.stderr
error: Invalid left-hand side in 'for...in' statement
 --> $DIR/tests/typescript-errors/tsc/async/es2017/await_unaryExpression_es2017_3/input.ts:4:7
  |
4 |     ++await 42; // Error
  |       ^^^^^^^^

error: Invalid left-hand side in 'for...in' statement
 --> $DIR/tests/typescript-errors/tsc/async/es2017/await_unaryExpression_es2017_3/input.ts:8:7
  |
8 |     --await 42; // Error
  |       ^^^^^^^^

